--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <div class="preloader"> 
+        <img src="Logo.png" class="preloader__image"/>
+    </div>
     <div class="app">
         Ну че как долго а
     </div>
+    <script src="main.js"></script> 
 </body>
 </html>
